--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h1 {
 	margin-left: 300px;
 }
 button {
-	background-color: red;
+	background-color: black;
 	color: white;
 	padding: 30px;
 	margin-top: 50px;
