--- a/app/src/App.css
+++ b/app/src/App.css
@@ -9,5 +9,11 @@
   background-color: white;
   border: 1px solid black;
   font-size: 100px;
+  text-align: center;
+
+}
+.dynamic-style {
+  display: none;
+  background-color: powderblue;
 
 }
