--- a/TravelBlog/blog.css
+++ b/TravelBlog/blog.css
@@ -99,40 +99,40 @@
  }
 
  .travelpic1 {
-    background-image:url('/Users/allamarana/TravelBlog/slider-1.png');
+    background-image:url('slider-1.png');
     background-repeat: no-repeat;
     height: 604px;
     width: 100%;
     margin: 0 auto;
     display: flex;
-    /*flex-direction: column;
-    justify-content: flex-end;*/
+    flex-direction: column;
+    justify-content: flex-end;
     line-height: 0;
  }
  .travelpic2 {
-    background-image:url('/Users/allamarana/TravelBlog/slider-1.png');
+    background-image:url('slider-1.png');
     background-repeat: no-repeat;
     height: 604px;
     width: 100%;
     margin: 0 auto;
     display: flex;
-    /*flex-direction: column;
-    justify-content: flex-end;*/
+    flex-direction: column;
+    justify-content: flex-end;
     line-height: 0;
  }
  .travelpic3 {
-    background-image:url('/Users/allamarana/TravelBlog/slider-1.png');
+    background-image:url('slider-1.png');
     background-repeat: no-repeat;
     height: 604px;
     width: 100%;
     margin: 0 auto;
     display: flex;
-    /*flex-direction: column;
-    justify-content: flex-end;*/
+   flex-direction: column;
+    justify-content: flex-end;
     line-height: 0;
  }
 
-/* .trtext{
+/*.trtext{
 
     height: 103px;
     width: 643px;
@@ -197,11 +197,11 @@ article .travelpic1 .travelpic2 .travelpic3{
     width: 100%;
 }
 
-#desktop: checked ~ #slider {
+/* #desktop: checked ~ #slider {
     max-width: 960 px;
 }
 
 
 #switch1: checked ~ #controls label:nth-child(3)
-#switch2: checked ~ #controls label:nth-child(1)
-#switch3: checked ~ #controls label:nth-child(2)
+#switch2: checked ~ #controls label:nth-child(1) */
+/* #switch3: checked ~ #controls label:nth-child(2) */
